--- a/trial2/blog/app/views/users/edit.html.erb
+++ b/trial2/blog/app/views/users/edit.html.erb
@@ -1,2 +1,12 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<%= form_for @user do |f| %>
+	<div>
+  	First name: <%= f.text_field :first_name %>
+  </div>
+	<div>
+  Last name: <%= f.text_field :last_name %>
+  </div>
+	<div>
+  Email: <%= f.text_field :email %>
+  </div>
+  <%= f.submit "Save User" %>
+<% end %>
