--- a/trial2/blog/app/views/users/show.html.erb
+++ b/trial2/blog/app/views/users/show.html.erb
@@ -1,4 +1,30 @@
 <div>
   Welcome, <%= @user.email %>
 </div>
-<%= button_to "Delete", @user, method: :delete %>
+
+<h2>Add an article:</h2>
+<%= form_for([@user, @user.articles.build]) do |f| %>
+  <p>
+    <%= f.label :title %><br>
+    <%= f.text_field :title %>
+  </p>
+  <p>
+    <%= f.label :content %><br>
+    <%= f.text_area :content %>
+  </p>
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
+
+<h2>Articles</h2>
+<% @user.articles.each do |article| %>
+  <p>
+    <strong>Title:</strong>
+    <%= article.title %>
+  </p>
+ 
+  <p>
+    <%= article.content %>
+  </p>
+<% end %>
